# MorgenMCP

./: CLAUDE.md  pyproject.toml
morgenmcp/: client.py  server.py
morgenmcp/tools/: events.py  id_registry.py  tasks.py
tests/: conftest.py  test_id_persistence.py  test_mcp_server.py
