[project]
name = "morgenmcp"
version = "0.1.0"
description = "MCP server for Morgen calendar API"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0,<3.1",
    "httpx>=0.28",
    "platformdirs>=4.0",
    "pydantic>=2.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
    "ruff>=0.15.3",
    "pre-commit>=4.0",
    "pyright>=1.1.408",
]

[project.scripts]
morgenmcp = "morgenmcp.server:main"

[tool.uv]
package = true
prerelease = "if-necessary-or-explicit"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit the real Morgen API (deselect with '-m not integration')",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter, docstrings exempt)
]

[tool.ruff.lint.isort]
known-first-party = ["morgenmcp"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
